...
        <menu title="AMainMenu" systemMenu="main" id="29">
            <items>
                <menuItem title="SubnetCalc" id="56">
                    <menu key="submenu" title="SubnetCalc" systemMenu="apple" id="57">
                        <items>
...
                            <menuItem title="Export Clipboard" keyEquivalent="b" id="ceZ-iQ-E9j">
                                <connections>
                                    <action selector="exportClipboard:" target="b7w-M5-ti7" id="zLT-O3-hjU"/>
                                </connections>
                            </menuItem>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
                                                    <comboBox identifier="subnetmaskcombo" verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="565">
                                                        <rect key="frame" x="20" y="10" width="227" height="26"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
                                                    <comboBox identifier="subnetbitscombo" verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="567">
                                                        <rect key="frame" x="14" y="10" width="96" height="26"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
                                                    <comboBox identifier="maskbitscombo" verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="569">
                                                        <rect key="frame" x="14" y="10" width="95" height="26"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
                                                    <comboBox identifier="maxsubnetcombo" verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="571">
                                                        <rect key="frame" x="20" y="10" width="229" height="26"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
                                                    <comboBox identifier="maxhostscombo" verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="573">
                                                        <rect key="frame" x="20" y="10" width="227" height="26"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
                                                    <textField identifier="subnetrangetext" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="575">
                                                        <rect key="frame" x="20" y="14" width="547" height="22"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
                                                    <textField identifier="subnetidtext" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="577">
                                                        <rect key="frame" x="17" y="14" width="232" height="22"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
                                                    <textField identifier="subnetbroadcasttext" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="579">
                                                        <rect key="frame" x="17" y="14" width="230" height="22"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
                                                    <textField identifier="classbitmap" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Okj-gg-NHb">
                                                        <rect key="frame" x="17" y="14" width="550" height="22"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
                                                    <textField identifier="binarymap" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cg2-6d-5fs">
                                                        <rect key="frame" x="17" y="14" width="550" height="22"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                        <rect key="frame" x="14" y="10" width="556" height="26"/>
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                                        <popUpButtonCell key="cell" type="push" title="Class A: 1.0.0.0 - 126.255.255.255" bezelStyle="rounded" alignment="left" lineBreakMode="clipping" state="on" borderStyle="borderAndBezel" identifier="addrclasstypecell" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" selectedItem="ti9-uV-lnh" id="0wI-q0-Xip">
                                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                            <font key="font" metaFont="menu"/>
...
                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                <subviews>
