...
												<bool key="NSTransparent">NO</bool>
											</object>
										</array>
										<string key="NSFrame">{{10, 33}, {436, 324}}</string>
										<reference key="NSNextKeyView" ref="1055122761"/>
									</object>
									<string key="NSLabel">Address</string>
									<object class="NSColor" key="NSColor" id="712183783">
										<int key="NSColorSpace">6</int>
										<string key="NSCatalogName">System</string>
										<string key="NSColorName">controlColor</string>
										<object class="NSColor" key="NSColor" id="772768542">
											<int key="NSColorSpace">3</int>
...
